--- a/wait.ui
+++ b/wait.ui
@@ -6,20 +6,20 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>320</width>
-    <height>40</height>
+    <width>240</width>
+    <height>36</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
-    <width>320</width>
-    <height>40</height>
+    <width>240</width>
+    <height>36</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
-    <width>320</width>
-    <height>40</height>
+    <width>240</width>
+    <height>36</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -28,16 +28,16 @@
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>0</x>
+     <x>-1</x>
      <y>-4</y>
-     <width>320</width>
-     <height>40</height>
+     <width>241</width>
+     <height>37</height>
     </rect>
    </property>
    <property name="font">
     <font>
-     <pointsize>13</pointsize>
-     <italic>true</italic>
+     <pointsize>11</pointsize>
+     <italic>false</italic>
      <bold>false</bold>
     </font>
    </property>
@@ -45,7 +45,7 @@
     <enum>Qt::NoContextMenu</enum>
    </property>
    <property name="text">
-    <string>Searching for devices...</string>
+    <string>Searching for devices</string>
    </property>
    <property name="alignment">
     <set>Qt::AlignCenter</set>
