--- a/about.ui
+++ b/about.ui
@@ -104,17 +104,16 @@ hr { height: 1px; border-width: 0; }
      </widget>
     </item>
     <item>
-     <spacer name="horizontalSpacer">
-      <property name="orientation">
-       <enum>Qt::Horizontal</enum>
+     <widget class="QPushButton" name="button_Website">
+      <property name="font">
+       <font>
+        <pointsize>7</pointsize>
+       </font>
       </property>
-      <property name="sizeHint" stdset="0">
-       <size>
-        <width>40</width>
-        <height>20</height>
-       </size>
+      <property name="text">
+       <string>Visit Project</string>
       </property>
-     </spacer>
+     </widget>
     </item>
     <item>
      <widget class="QPushButton" name="button_OK">
