Add reboot function

--- a/startwindow.ui
+++ b/startwindow.ui
@@ -26,7 +26,7 @@
    <string>startWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QWidget" name="">
+   <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
       <x>12</x>
@@ -417,6 +417,13 @@
             </size>
            </property>
           </spacer>
+         </item>
+         <item>
+          <widget class="QPushButton" name="pushButton_reboot">
+           <property name="text">
+            <string>Reboot</string>
+           </property>
+          </widget>
          </item>
          <item>
           <widget class="QPushButton" name="pushButton_options">
